[fix] 增加ios微信接入，以及ios工程一键生成.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 [Bb]uilds/
 Assets/Resources*
 Assets/StreamingAssets*
+Assets/StreamingAssets.meta
 [Pp]rojectSettings
 [Pp]atch/
 [Uu]nityPackageManager/
@@ -36,3 +37,5 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
+iosproject/
