修正微信登录时可以多次点击登录按钮的问题；尝试解决微信分享后出现白屏的问题

--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -76,7 +76,9 @@
         </activity>
         <activity
             android:name="com.bshy.mahjong.wxapi.WXEntryActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:launchMode="singleTop"
+            android:theme="@android:style/Theme.Translucent" >
         </activity>
         <activity
             android:name="com.bshy.mahjong.sgapi.SGEntryActivity"
