--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 [Oo]bj/
 [Bb]uilds/
 Assets/Resources*
+Assets/Resources.meta
 Assets/StreamingAssets*
 Assets/StreamingAssets.meta
+Assets/Client/Editor/BuildManager/output.txt
+Assets/Client/Editor/BuildManager/output.txt.meta
 [Uu]nityPackageManager/
 
 # Visual Studio 2015 cache directory
