--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -50,16 +50,13 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.GET_TASKS"/>
-	
+
     <application
         android:banner="@drawable/app_banner"
         android:icon="@drawable/app_icon"
         android:isGame="true"
         android:label="@string/app_name"
-		android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/UnityThemeSelector" >
-
         <activity
             android:name="com.bshy.mahjong.MahjongActivity"
             android:configChanges="mcc|mnc|locale|touchscreen|keyboard|keyboardHidden|navigation|orientation|screenLayout|uiMode|screenSize|smallestScreenSize|fontScale|layoutDirection|density"
@@ -72,6 +69,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="yjmj" />
+            </intent-filter>
 
             <meta-data
                 android:name="unityplayer.UnityActivity"
@@ -80,7 +85,6 @@
         <activity
             android:name="com.bshy.mahjong.wxapi.WXEntryActivity"
             android:exported="true"
-            android:launchMode="singleTop"
             android:theme="@android:style/Theme.Translucent" >
         </activity>
         <activity
@@ -119,8 +123,6 @@
         <meta-data
             android:name="android.max_aspect"
             android:value="2.1" />
-			
-		<uses-library android:name="org.apache.http.legacy" android:required="false" />
     </application>
 
 </manifest>
